--- a/404.md
+++ b/404.md
@@ -1,19 +1,8 @@
 ---
 layout: page
-title: 404 - DEAD END STREET
+title: 404 Not Found
 permalink: /404.html
 ---
 
-In all probability it ain't the page you are looking for.  
+See definitions of [404 Not Found](https://developer.mozilla.org/en-US/docs/Web/HTTP/Reference/Status/404)
 
-But as Robert Breault once said,  
-
-> Sometimes it's worth getting lost to see who will come looking for us.  
-
-Since you're here anyway, why not say hello to Roscoe the pug dog!  
-
-Next you can try & find something interesting at **[my site]({{ site.baseurl }}/)**.  
-
-Or you can do a **[site search]({{ site.baseurl }}/search)** if you're looking for something particular.  
-
-<img align="left" width="560" height="560" src="{{ site.baseurl }}/assets/image/404.jpg" title="Roscoe with Dead End Sign by zoomar">  
